adding a new string for Tomorrow

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -221,6 +221,7 @@
     <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
 
     <!-- Times -->
+    <string name="tomorrow">Tomorrow</string>
     <string name="seconds_raw">seconds</string>
     <string name="minutes_raw">minuty</string>
     <string name="hours_raw">hodiny</string>
