--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -221,7 +221,8 @@
     <string name="fingerprint_setup_successfully">Suojaus onnistui. Asenna sovellus uudelleen jos kohtaat ongelmia.</string>
 
     <!-- Times -->
-    <string name="seconds_raw">sekunnit</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="seconds_raw">seconds</string>
     <string name="minutes_raw">minuutit</string>
     <string name="hours_raw">tunnit</string>
     <string name="days_raw">päivät</string>
