--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -220,6 +220,7 @@
     <string name="fingerprint_setup_successfully">Configuració de la protecció amb èxit. Torneu a instal·lar l\'aplicació en cas de problemes amb restablir-la.</string>
 
     <!-- Times -->
+    <string name="tomorrow">Tomorrow</string>
     <string name="seconds_raw">segons</string>
     <string name="minutes_raw">minuts</string>
     <string name="hours_raw">hores</string>
