minor fixes for the LT translation

--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -461,7 +461,7 @@
     <string name="faq_3_title_commons">Aš per klaidą ištryniau keletą bylų, kaip jas atkurti?</string>
     <string name="faq_3_text_commons">Deja, jūs negalite. Bylos iš karto ištrinamos po patvirtinimo dialogo, nėra šiukšliadėžės.</string>
     <string name="faq_4_title_commons">Aš nemėgstu valdiklio spalvų, galiu jas pakeisti?</string>
-    <string name="faq_4_text_commons">Taip, kai vilksite valdiklį savo pagrindiniame ekrane, pasirodys valdiklio konfigūracijos ekranas. Apatiniame kairiajame kampe pamatysite spalvotą kvadratą, tiesiog paspauskite, kad pasirinktumėte naują spalvą. Galite naudoti slankiklį, kad galėtumėte koreguoti pagrindinę spalvą
+    <string name="faq_4_text_commons">Taip, kai vilksite valdiklį savo pagrindiniame ekrane, pasirodys valdiklio konfigūracijos ekranas. Apatiniame kairiajame kampe pamatysite spalvotą kvadratą, tiesiog paspauskite, kad pasirinktumėte naują spalvą. Galite naudoti slankiklį, kad galėtumėte koreguoti pagrindinę spalvą</string>
 
     <!-- License -->
     <string name="notice">Ši programa naudoja trečiųjų šalių licensijas ir padaro mano gyvenimą geresnį. Ačiū.</string>
@@ -479,7 +479,7 @@
     <string name="photoview_title">PhotoView (judančių paveiksliukų didinimui)</string>
     <string name="pattern_title">PatternLockView (modelio apsaugai)</string>
     <string name="reprint_title">Reprint (piršto atspaudo apsaugai)</string>
-    <string name="gif_drawable_title">Gif Drawable (GIF'ų įkėlimui)</string>
+    <string name="gif_drawable_title">Gif Drawable (GIF\'ų įkėlimui)</string>
     <string name="autofittextview_title">AutoFitTextView (teksto dydžio keitimui)</string>
     <string name="robolectric_title">Robolectric (testavimo aplinkai)</string>
     <string name="espresso_title">Espresso (testavimo pagalbai)</string>
