adding some alarm related strings

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Ignorer</string>
     <string name="no_reminder">Pas de rappel</string>
     <string name="at_start">Au démarrage</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Paramètres</string>
