--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -329,6 +329,9 @@
     <string name="dismiss">Nutraukti</string>
     <string name="no_reminder">Nėra priminimo</string>
     <string name="at_start">Paleidžiant</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Nustatymai</string>
