--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -326,6 +326,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Brak przypomnienia</string>
     <string name="at_start">Przy rozpoczęciu</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Ustawienia</string>
