--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -330,6 +330,9 @@
     <string name="dismiss">Odstrániť</string>
     <string name="no_reminder">Žiadna pripomienka</string>
     <string name="at_start">Na začiatku</string>
+    <string name="system_sounds">Systémové zvuky</string>
+    <string name="your_sounds">Vaše zvuky</string>
+    <string name="add_new_sound">Pridať nový zvuk</string>
 
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
