--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Adc\'halv ebet</string>
     <string name="at_start">D\'an deroù</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
