--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -329,6 +329,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Žádné připomenutí</string>
     <string name="at_start">Na začátku</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Nastavení</string>
