--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Ohita</string>
     <string name="no_reminder">Ei muistutusta</string>
     <string name="at_start">Alussa</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Asetukset</string>
