--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -311,6 +311,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Sin recordatorio</string>
     <string name="at_start">Ao inicio</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Ajustes</string>
