--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -330,6 +330,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">No reminder</string>
     <string name="at_start">At start</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Postavke</string>
