--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Ignora</string>
     <string name="no_reminder">Nessun promemoria</string>
     <string name="at_start">All\'inizio</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Impostazioni</string>
