--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">알림 없음</string>
     <string name="at_start">시작할 때</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">설정</string>
