--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">Avvis</string>
     <string name="no_reminder">Ingen påminnelse</string>
     <string name="at_start">Ved start</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Innstillinger</string>
