--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -338,6 +338,9 @@
     <string name="dismiss">Закрыть</string>
     <string name="no_reminder">Без напоминания</string>
     <string name="at_start">С наступлением события</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">Настройки</string>
