--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -312,6 +312,9 @@
     <string name="dismiss">关闭</string>
     <string name="no_reminder">不再提醒</string>
     <string name="at_start">开始时</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">设置</string>
