--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -311,6 +311,9 @@
     <string name="dismiss">關閉</string>
     <string name="no_reminder">不提醒</string>
     <string name="at_start">準時</string>
+    <string name="system_sounds">System sounds</string>
+    <string name="your_sounds">Your sounds</string>
+    <string name="add_new_sound">Add a new sound</string>
 
     <!-- Settings -->
     <string name="settings">設定</string>
