--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -308,6 +308,7 @@
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Alarm</string>
     <string name="snooze">Daleañ</string>
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Adc\'halv ebet</string>
