--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -308,6 +308,7 @@
     <string name="reminder_warning">Bitte stell sicher, dass die Erinnerung zuverlässig funktioniert, bevor Du Dich darauf verlässt. Es könnte wegen Systemeinschränkungen (z.B. Stromsparfunktion) fehlschlagen.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Wecker</string>
     <string name="snooze">Snooze</string>
     <string name="dismiss">Abstellen</string>
     <string name="no_reminder">Keine Erinnerung</string>
