--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -308,6 +308,7 @@
     <string name="reminder_warning">Veuillez vérifier que les rappels fonctionnent correctement avant de leur faire confiance. Ils pourraient ne pas fonctionner correctement, à cause de la politique d\'économie d\'énergie de votre appareil.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Réveil</string>
     <string name="snooze">Répéter</string>
     <string name="dismiss">Ignorer</string>
     <string name="no_reminder">Pas de rappel</string>
