--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -325,6 +325,7 @@
     <string name="reminder_warning">Prieš naudodamiesi, įsitikinkite, kad priminimai tinkamai veikia. Jie gali netinkamai veikti dėl sistemos apribojimų, susijusių su baterijos taupymu.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Žadintuvas</string>
     <string name="snooze">Snausti</string>
     <string name="dismiss">Nutraukti</string>
     <string name="no_reminder">Nėra priminimo</string>
