--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -308,6 +308,7 @@
     <string name="reminder_warning">Certifique-se de que o lembrete está a funcionar corretamente antes de o utilizar na plenitude. Pode ter um comportamento errático devido a restrições do sistema.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Alarme</string>
     <string name="snooze">Snooze</string>
     <string name="dismiss">Descartar</string>
     <string name="no_reminder">Sem lembrete</string>
