--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -334,6 +334,7 @@
     <string name="reminder_warning">Пожалуйста, убедитесь, что напоминания работают правильно, прежде чем полагаться на них. Они могут не работать должным образом из-за системных ограничений, связанных с экономией батареи.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Alarm</string>
     <string name="snooze">Отложить</string>
     <string name="dismiss">Закрыть</string>
     <string name="no_reminder">Без напоминания</string>
