--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -326,6 +326,7 @@
     <string name="reminder_warning">Pred tým, ako by ste sa na pripomienky spoliehali, sa prosím uistite, že fungujú správne. Niektoré systémové obmedzenia spojené so zlepšením výdrže batérie môžu spôsobiť problémy.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Budík</string>
     <string name="snooze">Odložiť</string>
     <string name="dismiss">Odstrániť</string>
     <string name="no_reminder">Žiadna pripomienka</string>
