--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -307,6 +307,7 @@
     <string name="reminder_warning">依靠提醒功能之前，請先確認是否正常運作，有可能因為省電相關的系統限制而導致失靈。</string>
 
     <!-- Alarms -->
+    <string name="alarm">鬧鐘</string>
     <string name="snooze">延遲</string>
     <string name="dismiss">關閉</string>
     <string name="no_reminder">不提醒</string>
