--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -322,6 +322,7 @@
     <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
 
     <!-- Alarms -->
+    <string name="alarm">Alarm</string>
     <string name="snooze">Drzemka</string>
     <string name="dismiss">Dismiss</string>
     <string name="no_reminder">Brak przypomnienia</string>
