--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -313,9 +313,9 @@
     <string name="dismiss">Uitzetten</string>
     <string name="no_reminder">Geen herinnering</string>
     <string name="at_start">Als afspraak begint</string>
-    <string name="system_sounds">System sounds</string>
-    <string name="your_sounds">Your sounds</string>
-    <string name="add_new_sound">Add a new sound</string>
+    <string name="system_sounds">Systeemgeluiden</string>
+    <string name="your_sounds">Eigen geluiden</string>
+    <string name="add_new_sound">Nieuw geluid toevoegen</string>
 
     <!-- Settings -->
     <string name="settings">Instellingen</string>
