Update Swedish translation

--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -221,7 +221,7 @@
     <string name="fingerprint_setup_successfully">Skyddet har ställts in. Installera om appen om du inte kan ta bort skyddet.</string>
 
     <!-- Times -->
-    <string name="tomorrow">Tomorrow</string>
+    <string name="tomorrow">Imorgon</string>
     <string name="seconds_raw">sekunder</string>
     <string name="minutes_raw">minuter</string>
     <string name="hours_raw">timmar</string>
@@ -313,9 +313,9 @@
     <string name="dismiss">Stäng av</string>
     <string name="no_reminder">Ingen påminnelse</string>
     <string name="at_start">Vid start</string>
-    <string name="system_sounds">System sounds</string>
-    <string name="your_sounds">Your sounds</string>
-    <string name="add_new_sound">Add a new sound</string>
+    <string name="system_sounds">Systemljud</string>
+    <string name="your_sounds">Dina ljud</string>
+    <string name="add_new_sound">Lägg till ett nytt ljud</string>
 
     <!-- Settings -->
     <string name="settings">Inställningar</string>
