--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -313,9 +313,9 @@
     <string name="dismiss">Slå fra</string>
     <string name="no_reminder">Ingen påmindelse</string>
     <string name="at_start">Ved start</string>
-    <string name="system_sounds">System sounds</string>
-    <string name="your_sounds">Your sounds</string>
-    <string name="add_new_sound">Add a new sound</string>
+    <string name="system_sounds">Systemlyde</string>
+    <string name="your_sounds">Dine lyde</string>
+    <string name="add_new_sound">Tilføj en ny lyd</string>
 
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
