use 2 letter versions of short week days in slovak

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -412,13 +412,13 @@
     <string name="saturday_letter">S</string>
     <string name="sunday_letter">N</string>
 
-    <string name="monday_short">Pon</string>
-    <string name="tuesday_short">Uto</string>
-    <string name="wednesday_short">Str</string>
-    <string name="thursday_short">Štv</string>
-    <string name="friday_short">Pia</string>
-    <string name="saturday_short">Sob</string>
-    <string name="sunday_short">Ned</string>
+    <string name="monday_short">Po</string>
+    <string name="tuesday_short">Ut</string>
+    <string name="wednesday_short">St</string>
+    <string name="thursday_short">Št</string>
+    <string name="friday_short">Pi</string>
+    <string name="saturday_short">So</string>
+    <string name="sunday_short">Ne</string>
 
     <!-- About -->
     <string name="about">O aplikácií</string>
