--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -196,7 +196,7 @@
     <string name="use_for_this_folder">Utiliser pour ce dossier uniquement</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">Etes-vous sûr•e de vouloir effectuer la suppression ?</string>
+    <string name="proceed_with_deletion">Êtes-vous sûr•e de vouloir effectuer la suppression ?</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
 
@@ -221,8 +221,8 @@
     <string name="fingerprint_setup_successfully">Protection mise en place avec succès. Veuillez réinstaller l\'appli en cas d\'oubli.</string>
 
     <!-- Times -->
-    <string name="tomorrow">Tomorrow</string>
-    <string name="seconds_raw">sekunnit</string>
+    <string name="tomorrow">Demain</string>
+    <string name="seconds_raw">secondes</string>
     <string name="minutes_raw">minutes</string>
     <string name="hours_raw">heures</string>
     <string name="days_raw">jours</string>
@@ -258,16 +258,16 @@
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d seconde</item>
+        <item quantity="other">%d secondes</item>
     </plurals>
     <plurals name="in_minutes">
         <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d heure</item>
+        <item quantity="other">%d heures</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
@@ -313,9 +313,9 @@
     <string name="dismiss">Ignorer</string>
     <string name="no_reminder">Pas de rappel</string>
     <string name="at_start">Au démarrage</string>
-    <string name="system_sounds">System sounds</string>
-    <string name="your_sounds">Your sounds</string>
-    <string name="add_new_sound">Add a new sound</string>
+    <string name="system_sounds">Sonneries du système</string>
+    <string name="your_sounds">Vos sonneries</string>
+    <string name="add_new_sound">Ajouter une nouvelle sonnerie</string>
 
     <!-- Settings -->
     <string name="settings">Paramètres</string>
