adding a new string about changing color

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Forgrundsfarve</string>
     <string name="app_icon_color">Farve til appens ikon</string>
     <string name="restore_defaults">Gendan standarder</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Udseende</string>
     <string name="changing_color_description">Ændring af farve vil også medføre skift til tilpasset udseende</string>
     <string name="save">Gem</string>
