--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Etualan väri</string>
     <string name="app_icon_color">Sovelluksen ikonin väri</string>
     <string name="restore_defaults">Palauta oletukset</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Teema</string>
     <string name="changing_color_description">Värin vaihtaminen vaihtaa teemaksi "Oma teema"</string>
     <string name="save">Tallenna</string>
