--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Couleur de fond</string>
     <string name="app_icon_color">Couleur de fond de l\'îcone de l\'application</string>
     <string name="restore_defaults">Restaurer les valeurs par défaut</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Thème</string>
     <string name="changing_color_description">Changer une couleur le basculera en thème personnalisé</string>
     <string name="save">Sauvegarder</string>
