--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Colore in primo piano</string>
     <string name="app_icon_color">Colore icona app</string>
     <string name="restore_defaults">Ripristina predefiniti</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Modificando un colore, il tema diventerà personale</string>
     <string name="save">Salva</string>
