--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Forgrunnsfarge</string>
     <string name="app_icon_color">Farge for app-ikon</string>
     <string name="restore_defaults">Gjenopprett standard</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Endring av farge vil gjøre at det skiftes til Tilpasset tema</string>
     <string name="save">Lagre</string>
