--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -140,6 +140,7 @@
     <string name="foreground_color">Farba popredia</string>
     <string name="app_icon_color">Farba spúšťacej ikonky apky</string>
     <string name="restore_defaults">Obnoviť predvolené</string>
+    <string name="change_color">Zmeniť farbu</string>
     <string name="theme">Téma</string>
     <string name="changing_color_description">Zmena farby spôsobí prepnutie na Vlastnú tému</string>
     <string name="save">Uložiť</string>
