--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Vordergrundfarbe</string>
     <string name="app_icon_color">App-Icon-Farbe</string>
     <string name="restore_defaults">Standard wiederherstellen</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Thema</string>
     <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf "Benutzerdefiniert"</string>
     <string name="save">Speichern</string>
