--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Valores por defecto</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Cambiar un color hará que cambie a tema personalizado</string>
     <string name="save">Guardar</string>
