--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -140,6 +140,7 @@
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Vrati zadano</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Promjenom boje, prelazi se na Prilagođenu temu</string>
     <string name="save">Spremi</string>
