--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">デフォルトに戻す</string>
+    <string name="change_color">Change color</string>
     <string name="theme">テーマ</string>
     <string name="changing_color_description">色を変更すると、テーマが「カスタム」に切り替わります</string>
     <string name="save">保存</string>
