--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">기본설정으로 변경</string>
+    <string name="change_color">Change color</string>
     <string name="theme">테마</string>
     <string name="changing_color_description">주요 색상(테마)을 변경하면 사용자정의 테마로 전환됩니다.</string>
     <string name="save">저장</string>
