--- a/commons/src/main/res/values-no/strings.xml
+++ b/commons/src/main/res/values-no/strings.xml
@@ -139,6 +139,7 @@
     <string name="foreground_color">Foreground color</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">Restore defaults</string>
+    <string name="change_color">Change color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Changing a color will make it switch to Custom theme</string>
     <string name="save">Lagre</string>
