--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -139,7 +139,7 @@
     <string name="foreground_color">Color de primer pla</string>
     <string name="app_icon_color">Color de la icona d\'aplicació</string>
     <string name="restore_defaults">Valors per defecte</string>
-    <string name="change_color">Change color</string>
+    <string name="change_color">Canviar de color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Canviar un color farà que canvii a tema personalitzat</string>
     <string name="save">Dear</string>
