--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -139,7 +139,7 @@
     <string name="foreground_color">Color de primer plano</string>
     <string name="app_icon_color">Color del icono de la aplicación</string>
     <string name="restore_defaults">Valores por defecto</string>
-    <string name="change_color">Change color</string>
+    <string name="change_color">Cambiar de color</string>
     <string name="theme">Tema</string>
     <string name="changing_color_description">Cambiar un color hará que cambie a tema personalizado</string>
     <string name="save">Guardar</string>
